--- a/profile/nkod/i18n/translation-cs.json
+++ b/profile/nkod/i18n/translation-cs.json
@@ -46,7 +46,10 @@
       "f_opz_logo_link": "/images/ozp_logo_cz.jpg",
       "close": "Zavři",
       "en": "English",
-      "cs": "Čeština"
+      "cs": "Čeština",
+      "edit_dataset": "Uprav datovou sadu",
+      "delete_dataset": "Smaž datavoou sadu",
+      "delete_catalog": "Smaž katalog"
     }
   }
 }
