--- a/profile/nkod/i18n/translation-cs.json
+++ b/profile/nkod/i18n/translation-cs.json
@@ -49,7 +49,8 @@
       "cs": "Čeština",
       "edit_dataset": "Uprav datovou sadu",
       "delete_dataset": "Smaž datavoou sadu",
-      "delete_catalog": "Smaž katalog"
+      "delete_catalog": "Smaž katalog",
+      "follow_link": "Přejít na odkaz"
     }
   }
 }
