--- a/profile/nkod/i18n/translation-en.json
+++ b/profile/nkod/i18n/translation-en.json
@@ -49,7 +49,8 @@
       "cs": "Čeština",
       "edit_dataset": "Edit dataset",
       "delete_dataset": "Delete dataset",
-      "delete_catalog": "Delete catalog"
+      "delete_catalog": "Delete catalog",
+      "follow_link": "Dereference link"
     }
   }
 }
