--- a/profile/nkod/i18n/translation-cs.json
+++ b/profile/nkod/i18n/translation-cs.json
@@ -48,7 +48,7 @@
       "en": "English",
       "cs": "Čeština",
       "edit_dataset": "Uprav datovou sadu",
-      "delete_dataset": "Smaž datavoou sadu",
+      "delete_dataset": "Smaž datavou sadu",
       "delete_catalog": "Smaž katalog",
       "follow_link": "Přejít na odkaz"
     }
